# jupyter-matlab-proxy

./: README.md  pyproject.toml  setup.cfg  troubleshooting.md
.devcontainer/with-matlab/: Dockerfile  devcontainer.json
.github/workflows/: publish-tljh-matlab.yml  release.yml  run-tests.yml  test-tljh-matlab.yml
install_guides/the-littlest-jupyterhub/: README.md
src/jupyter_matlab_kernel/: README.md  __init__.py  __main__.py  kernel.json  kernel.py  mwi_comm_helpers.py
src/jupyter_matlab_kernel/matlab/: processJupyterKernelRequest.m
src/jupyter_matlab_kernel/matlab/+jupyter/: complete.m  execute.m
src/jupyter_matlab_labextension/: README.md
src/jupyter_matlab_labextension/src/: icons.ts  index.ts  matlab.ts  matlab_browser_button.ts  matlab_cm_mode.ts  matlab_files.ts  svg.d.ts
src/jupyter_matlab_proxy/: README.md  __init__.py
